@@ -45,6 +45,9 @@ Version 1.3-svn:
       a release Mordante's graphics suck ;) )
     * When not in drawing mode the brush setting is ignored and drawn with
       the size of one tile.	
+    * Added the an alpha blended preview of the selected terrains upon 
+      drawing the optimal alpha value needs some tuning so there's a 
+      setting, which is not stored in the preferences.
 
   * Multiplayer
     * Maps
