@@ -27,6 +27,9 @@ Version 1.3-svn:
    * added the paste option to the edit menu
    * added the option to split the terrains is groups
    * the brush size in non-drawing mode is ignored
+   * added the an alpha blended preview of the selected terrains upon 
+     drawing the optimal alpha value needs some tuning so there's a 
+     setting, which is not stored in the preferences
  * graphics
    * improved layering system for terrain graphics
    * fixed terrain selection probabilites (patch #617)
